--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,7 +13,17 @@ jobs:
         project: [ foods, orders, notifications, payment ]
 
     runs-on: ubuntu-latest
+
     steps:
+      - name: Debug Secrets
+        run: |
+          echo "DOCKERHUB_USERNAME is set: ${DOCKERHUB_USERNAME:+Yes}"
+          echo "DOCKERHUB_TOKEN is set: ${DOCKERHUB_TOKEN:+Yes}"
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
