--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -10,10 +10,15 @@ env:
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "${{ secrets.TF_WORKSPACE }}"
   CONFIG_DIRECTORY: "./infrastructure"
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
   docker-build:
     uses: ./.github/workflows/docker.yml
+    secrets: 
+      username: ${{ env.DOCKERHUB_USERNAME }}
+      password: ${{ env.DOCKERHUB_TOKEN }}
 
   terraform:
     name: "Terraform Apply"
