--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -16,7 +16,7 @@ jobs:
     uses: ./.github/workflows/docker.yml
     secrets: 
       DOCKERHUB_USERNAME: "${{ secrets.DOCKERHUB_USERNAME }}"
-      DOCKERHUB_PASSWORD: "${{ secrets.DOCKERHUB_TOKEN }}"
+      DOCKERHUB_TOKEN: "${{ secrets.DOCKERHUB_TOKEN }}"
 
   terraform:
     name: "Terraform Apply"
