--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,6 +17,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Repository  
+        uses: actions/checkout@v4
+
       - name: Debug Secrets
         run: |
           echo "DOCKERHUB_USERNAME is set: ${DOCKERHUB_USERNAME:+Yes}"
@@ -24,7 +27,6 @@ jobs:
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
