--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,7 +4,6 @@ on:
     secrets:
       DOCKERHUB_USERNAME:
         required: true
-      
       DOCKERHUB_TOKEN:
         required: true
 
@@ -16,7 +15,7 @@ jobs:
     needs: [ ci-gradle ]
     strategy:
       matrix:
-        project: [ foods, orders, notifications, payment ]
+        project: [foods, orders, notifications, payment]
 
     runs-on: ubuntu-latest
 
@@ -24,13 +23,14 @@ jobs:
       - name: Checkout Repository  
         uses: actions/checkout@v4
 
-      - name: Debug Secrets
-        run: |
-          echo "DOCKERHUB_USERNAME is set: ${DOCKERHUB_USERNAME:+Yes}"
-          echo "DOCKERHUB_TOKEN is set: ${DOCKERHUB_TOKEN:+Yes}"
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build_on_test-artifacts
+          path: ./${{ matrix.project }}/build/libs
+
+      - name: Debug JAR File
+        run: ls -R ./${{ matrix.project }}/build/libs
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -50,7 +50,5 @@ jobs:
           push: true
           context: ./${{ matrix.project }}
           file: ./${{ matrix.project }}/Dockerfile
-          platforms: "linux/arm64,linux/amd64"
-          tags: username/app:latest
-        env:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          platforms: linux/arm64,linux/amd64
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.project }}:latest
