--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,9 @@ jobs:
         run: |
           pwd
           ls
-          ls -R *.jar 
+      
+      - name: Find All JAR Files
+        run: find . -name "*.jar" -print
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
