--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,13 +4,11 @@ on:
     secrets:
       DOCKERHUB_USERNAME:
         required: true
+
       DOCKERHUB_TOKEN:
         required: true
 
 jobs:
-  ci-gradle:
-    uses: ./.github/workflows/ci-gradle.yml
-
   docker:
     needs: [ ci-gradle ]
     strategy:
@@ -22,6 +20,20 @@ jobs:
     steps:
       - name: Checkout Repository  
         uses: actions/checkout@v4
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Test and Build
+        run: |
+          chmod +x gradlew
+          ./gradlew clean build
 
       - name: Check 2
         run: |
