--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository  
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Setup Java 17
@@ -28,9 +28,11 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
-      
-      - name: Find All JAR Files
-        run: find . -name "*.jar" -print
+
+      - name: Test and Build
+        run: |
+          chmod +x gradlew
+          ./gradlew clean build
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
