--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,15 @@ subprojects {
 		annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 		annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 		annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+		// Actuator 추가
+		implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+		// Prometheus 추가
+		implementation 'io.micrometer:micrometer-registry-prometheus'
+
+		// mysql 추가
+		runtimeOnly 'com.mysql:mysql-connector-j'
 	}
 
 	tasks.named('test') {
