--- a/orders/src/main/resources/application.yml
+++ b/orders/src/main/resources/application.yml
@@ -1,5 +1,22 @@
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        exclude: "env, beans"
+
+  info:
+    java:
+      enabled: true
+
+    os:
+      enabled: true
+
 server:
-  port: 8083
+  port: 8080
+  tomcat:
+    mbeanregistry:
+      enabled: true
 
 spring:
   kafka:
@@ -37,7 +54,7 @@ logging:
     org:
       apache:
 #        kafka: TRACE
-        zorm:
+        orm:
           jpa:
             JpaTransactionManager: TRACE
       hibernate.sql: TRACE
@@ -52,5 +69,43 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_SERVER_IP}
 
+  datasource:
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: create-drop
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        exclude: "env, beans"
+
+  info:
+    java:
+      enabled: true
+
+    os:
+      enabled: true
+
+  prometheus:
+    metrics:
+      export:
+        pushgateway:
+          enabled: true
+          base-url: ${MONITORING_SERVER_IP}
+          push-rate: 30s
+          job: orders-service
+        enabled: true
+
 server:
   port: 8080
+  tomcat:
+    mbeanregistry:
+      enabled: true
