--- a/orders/src/test/resources/application.yml
+++ b/orders/src/test/resources/application.yml
@@ -35,7 +35,9 @@ payment:
   events:
     topics:
       process: payment.payment-processed-event
-      process-fail: payment.payment-processing-fail-event
+      process-fail: payment.payment-processing-failed-event
+      refund: payment.refund-processed-event
+      refund-fail: payment.refund-processing-failed-event
 
   dead-letter-topic: payment.dead-letter-topic
 
