--- a/foods/src/main/resources/application-prod.yml
+++ b/foods/src/main/resources/application-prod.yml
@@ -8,23 +8,13 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
-        exclude: "env, beans"
+        include: "prometheus"
+
   info:
     java:
       enabled: true
     os:
       enabled: true
-
-  prometheus:
-    metrics:
-      export:
-        pushgateway:
-          enabled: true
-          base-url: ${MONITORING_SERVER_IP}
-          push-rate: 30s
-          job: foods-service
-        enabled: true
 
 spring:
   kafka:
@@ -44,3 +34,5 @@ spring:
 logging:
   level:
     org.hibernate.sql: ERROR
+    io.micrometer: DEBUG
+    io.micrometer.prometheus: DEBUG
