--- a/foods/src/main/resources/application-prod.yml
+++ b/foods/src/main/resources/application-prod.yml
@@ -31,6 +31,12 @@ spring:
     hibernate:
       ddl-auto: validate
 
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      password: ${REDIS_PASSWORD}
+
 logging:
   level:
     org.hibernate.sql: ERROR
