--- a/foods/src/main/resources/application-prod.yml
+++ b/foods/src/main/resources/application-prod.yml
@@ -16,6 +16,16 @@ management:
     os:
       enabled: true
 
+  prometheus:
+    metrics:
+      export:
+        pushgateway:
+          enabled: true
+          base-url: ${MONITORING_SERVER_IP}
+          push-rate: 30s
+          job: foods-service
+        enabled: true
+
 spring:
   kafka:
     bootstrap-servers: ${KAFKA_SERVER_IP}
