--- a/foods/src/main/resources/application.yml
+++ b/foods/src/main/resources/application.yml
@@ -14,6 +14,11 @@ spring:
     hibernate:
       ddl-auto: validate
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
 orders:
   events:
     topics:
